--- a/f299-template-pi-logbook/fatec-template.tex
+++ b/f299-template-pi-logbook/fatec-template.tex
@@ -81,6 +81,7 @@ Banner Apresentação                 & 01/11 & 14/11 & Lucas Frazão e Ana Flá
 Áudio pitch                         & 03/11 & 05/11 & Bruno de Lucca & Conclusão da voz com IA \\ \hline
 Novo APEX                           & 12/11 & 13/11 & Leo Lima e Ricardo Estevam & Foi refeita a tela de cadastro e de login, por conta da anterior estar desalinhada \\ \hline
 Conclusão site Web                  & 14/11 & 14/11 & Ricardo Estevam & Menus navegáveis em JS \\ \hline
+                                    &       &       &                 &  \\ \hline
 \end{tabular}
 }
 \end{table}
