--- a/f299-template-pi-logbook/fatec-template.tex
+++ b/f299-template-pi-logbook/fatec-template.tex
@@ -72,16 +72,16 @@ Barra de Navegação                  & 17/10 & 19/10 & Ricardo Estevam & Barra 
 Customização Login APEX             & 20/10 & 20/10 & Leo Lima e Ana Flávia & Mudança nas cores de fundo da tela do APEX \\ \hline
 Ajustes mapa de calor Figma         & 20/10 & 20/10 & Ricardo Estevam & Ajuste no mapa de calor \\ \hline
 Tela Suporte Figma                  & 21/10 & 22/10 & Lucas Frazão & Conclusão da tela de suporte \\ \hline
-Artigo em LaTeX                     & 23/10 & pendente & Ricardo Estevam & Passando o Artigo para LaTeX \\ \hline
+Artigo em LaTeX                     & 23/10 & 17/11 & Ricardo Estevam & Passando o Artigo para LaTeX \\ \hline
 Referenciando artigo                & 24/10 & 27/10 & Ricardo Estevam & Término de referências \\ \hline
 Início modelagem conceitual e lógica& 24/10 & 30/10 & Lucas Frazão e Ana Flávia & Ajuste nas cardinalidades \\ \hline
 Validação do banco de dados APEX    & 25/10 & 27/10 & Leo Lima e Ana Flávia & Revisão de todos os processos \\ \hline
-Início pitch                        & 31/10 & pendente & Bruno de Lucca & Ideação pitch \\ \hline
+Início pitch                        & 31/10 & 18/11 & Bruno de Lucca & Ideação pitch \\ \hline
 Banner Apresentação                 & 01/11 & 14/11 & Lucas Frazão e Ana Flávia & Criação banner Figma \\ \hline
 Áudio pitch                         & 03/11 & 05/11 & Bruno de Lucca & Conclusão da voz com IA \\ \hline
 Novo APEX                           & 12/11 & 13/11 & Leo Lima e Ricardo Estevam & Foi refeita a tela de cadastro e de login, por conta da anterior estar desalinhada \\ \hline
 Conclusão site Web                  & 14/11 & 14/11 & Ricardo Estevam & Menus navegáveis em JS \\ \hline
-                                    &       &       &                 &  \\ \hline
+Ajustes telas Figma                 & 16/11 & 17/11 & Ricardo Estevam & Ajuste tela mapa\\ \hline
 \end{tabular}
 }
 \end{table}
