--- a/f299-template-pi-logbook/fatec-template.tex
+++ b/f299-template-pi-logbook/fatec-template.tex
@@ -76,12 +76,13 @@ Artigo em LaTeX                     & 23/10 & 17/11 & Ricardo Estevam & Passando
 Referenciando artigo                & 24/10 & 27/10 & Ricardo Estevam & Término de referências \\ \hline
 Início modelagem conceitual e lógica& 24/10 & 30/10 & Lucas Frazão e Ana Flávia & Ajuste nas cardinalidades \\ \hline
 Validação do banco de dados APEX    & 25/10 & 27/10 & Leo Lima e Ana Flávia & Revisão de todos os processos \\ \hline
-Início pitch                        & 31/10 & 18/11 & Bruno de Lucca & Ideação pitch \\ \hline
+Início pitch                        & 31/10 & 17/11 & Bruno de Lucca & Ideação pitch \\ \hline
 Banner Apresentação                 & 01/11 & 14/11 & Lucas Frazão e Ana Flávia & Criação banner Figma \\ \hline
 Áudio pitch                         & 03/11 & 05/11 & Bruno de Lucca & Conclusão da voz com IA \\ \hline
 Novo APEX                           & 12/11 & 13/11 & Leo Lima e Ricardo Estevam & Foi refeita a tela de cadastro e de login, por conta da anterior estar desalinhada \\ \hline
 Conclusão site Web                  & 14/11 & 14/11 & Ricardo Estevam & Menus navegáveis em JS \\ \hline
 Ajustes telas Figma                 & 16/11 & 17/11 & Ricardo Estevam & Ajuste tela mapa\\ \hline
+Ajustes no Pitch                    & 17/11 & 17/11 & Ricardo Estevam & Animações utilizando IA, áudio utilizando IA e também foi adicionado legendas com um IA\\ \hline
 \end{tabular}
 }
 \end{table}
