adicionando_DCU_E_DRedes

--- a/f299-template-pi-logbook/fatec-template.tex
+++ b/f299-template-pi-logbook/fatec-template.tex
@@ -76,6 +76,8 @@ Artigo em LaTeX                     & 23/10 & 17/11 & Ricardo Estevam & Passando
 Referenciando artigo                & 24/10 & 27/10 & Ricardo Estevam & Término de referências \\ \hline
 Início modelagem conceitual e lógica& 24/10 & 30/10 & Lucas Frazão e Ana Flávia & Ajuste nas cardinalidades \\ \hline
 Validação do banco de dados APEX    & 25/10 & 27/10 & Leo Lima e Ana Flávia & Revisão de todos os processos \\ \hline
+Criação do Diagrama de Redes        & 26/10 & 27/10 & Ricardo Estevam & Aqui foi feito o diagrama de redes do projeto baseado em AWS\\ \hline
+Diagrama de Caso e Uso              & 28/10 & 04/11 & Ricardo Estevam e Bruno de Lucca & Foi feito o diagrama de caso e uso para facilitar o entendimento dos processos do nosso aplicativo\\ \hline
 Início pitch                        & 31/10 & 17/11 & Bruno de Lucca & Ideação pitch \\ \hline
 Banner Apresentação                 & 01/11 & 14/11 & Lucas Frazão e Ana Flávia & Criação banner Figma \\ \hline
 Áudio pitch                         & 03/11 & 05/11 & Bruno de Lucca & Conclusão da voz com IA \\ \hline
