--- a/f299-template-pi-artifacts/fatec-template.tex
+++ b/f299-template-pi-artifacts/fatec-template.tex
@@ -28,10 +28,9 @@
 
 %exemplo da forma de organização das seções e subseções, você deverá adaptar o template para a realidade do seu projeto.
 
-\section*{Diagramas UML}
-    Nesta seção serão apresentados os diagramas da UML utilizados para a modelagem do sistema desenvolvido. Dentre os diagramas utilizados, pode-se citar: Diagrama de Caso de Uso, Diagrama de Classe e Diagrama de Objetos.
+
     
-    \subsection*{Diagrama de Caso de Uso}
+    \section*{Diagrama de Caso de Uso}
     \addcontentsline{toc}{section}{Diagrama de Caso de Uso}
 
     Atores: 
